other-cel/restrict-networkpolicy-empty-podselector/.chainsaw-test/policy-ready.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: restrict-networkpolicy-empty-podselector
status:
  ready: true
