other-cel/restrict-networkpolicy-empty-podselector/.chainsaw-test/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  creationTimestamp: null
  name: restrict-networkpolicy-empty-podselector
spec:
  steps:
  - name: step-01
    try:
    - apply:
        file: ../restrict-networkpolicy-empty-podselector.yaml
    - patch:
        resource:
          apiVersion: kyverno.io/v1
          kind: ClusterPolicy
          metadata:
            name: restrict-networkpolicy-empty-podselector
          spec:
            validationFailureAction: Enforce
    - assert:
        file: policy-ready.yaml
  - name: step-02
    try:
    - apply:
        file: netpol-good.yaml
    - apply:
        expect:
        - check:
            ($error != null): true
        file: netpol-bad.yaml
